instance1/temp-retrieve/objects/Medication_Status__c/Medication_Status__c.object-meta.xml
<CustomObject>
    <label>Medication Status</label>
    <nameField>
        <displayFormat>PBWQ - {0000000000}</displayFormat>
        <label>Medication Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medication Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>