instance1/temp-retrieve/objects/Medication_Status__c/fields/Anastrozole_mg__c.field-meta.xml
<CustomField>
    <fullName>Anastrozole_mg__c</fullName>
    <label>Anastrozole Miligrams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5 mg Once a Week</fullName>
            </value>
            <value>
                <fullName>05 mg Twice a Week</fullName>
            </value>
            <value>
                <fullName>0.5 Every 14 Days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>