instance1/temp-retrieve/objects/Medication_Status__c/fields/Armour_Thyroid_T3_T4_Dosage__c.field-meta.xml
<CustomField>
    <fullName>Armour_Thyroid_T3_T4_Dosage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Armour Thyroid/T3-T4 Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>