instance1/temp-retrieve/objects/Medication_Status__c/fields/B12_MIC_Lipolean__c.field-meta.xml
<CustomField>
    <fullName>B12_MIC_Lipolean__c</fullName>
    <label>B12/MIC (Lipolean)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>