instance1/temp-retrieve/objects/Medication_Status__c/fields/BPC_157_Pull_To_On_The_Syringe__c.field-meta.xml
<CustomField>
    <fullName>BPC_157_Pull_To_On_The_Syringe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BPC 157 Pull To On The Syringe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>