instance1/temp-retrieve/objects/Medication_Status__c/fields/CJC_1295_Pull_To_On_The_Syringe__c.field-meta.xml
<CustomField>
    <fullName>CJC_1295_Pull_To_On_The_Syringe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CJC 1295 Pull To On The Syringe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>