instance1/temp-retrieve/objects/Medication_Status__c/fields/DHEA__c.field-meta.xml
<CustomField>
    <fullName>DHEA__c</fullName>
    <label>DHEA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>