instance1/temp-retrieve/objects/Medication_Status__c/fields/DHEA_Dosage__c.field-meta.xml
<CustomField>
    <fullName>DHEA_Dosage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DHEA Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>