instance1/temp-retrieve/objects/Medication_Status__c/fields/Estradiol_Dose__c.field-meta.xml
<CustomField>
    <fullName>Estradiol_Dose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estradiol Dose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>