instance1/temp-retrieve/objects/Medication_Status__c/fields/HGH_Number_Do_You_Pull_To_On_The_Syringe__c.field-meta.xml
<CustomField>
    <fullName>HGH_Number_Do_You_Pull_To_On_The_Syringe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HGH Number Do You Pull To On The Syringe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>