instance1/temp-retrieve/objects/Medication_Status__c/fields/L_Cartinie_Dosage__c.field-meta.xml
<CustomField>
    <fullName>L_Cartinie_Dosage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>L-Cartinie Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>