instance1/temp-retrieve/objects/Medication_Status__c/fields/Patient_Fasting_For_Bloodwork__c.field-meta.xml
<CustomField>
    <fullName>Patient_Fasting_For_Bloodwork__c</fullName>
    <label>Patient Fasting For Bloodwork</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>