instance1/temp-retrieve/objects/Medication_Status__c/fields/PT141_Units__c.field-meta.xml
<CustomField>
    <fullName>PT141_Units__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PT141 Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>