instance1/temp-retrieve/objects/Medication_Status__c/fields/Semorelin_Morning_Before_The_Labs__c.field-meta.xml
<CustomField>
    <fullName>Semorelin_Morning_Before_The_Labs__c</fullName>
    <label>Semorelin Morning Before The Labs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>