instance1/temp-retrieve/objects/Medication_Status__c/fields/Semorelin_Pull_To_On_The_Syringe__c.field-meta.xml
<CustomField>
    <fullName>Semorelin_Pull_To_On_The_Syringe__c</fullName>
    <label>Semorelin Pull To On The Syringe</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>