instance1/temp-retrieve/objects/Medication_Status__c/fields/Testosterone_Dose__c.field-meta.xml
<CustomField>
    <fullName>Testosterone_Dose__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Testosterone Dose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>