instance1/temp-retrieve/objects/Medication_Status__c/fields/Testosterone_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Testosterone_Frequency__c</fullName>
    <label>Testosterone Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once a Week</fullName>
            </value>
            <value>
                <fullName>Twice a Week</fullName>
            </value>
            <value>
                <fullName>Three Times a Week</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>