instance1/temp-retrieve/objects/Medication_Status__c/fields/TestosteroneWhatDaysDoYouInject__c.field-meta.xml
<CustomField>
    <fullName>TestosteroneWhatDaysDoYouInject__c</fullName>
    <label>Testosterone What Day(s) Do You Inject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursdays</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>