instance1/temp-retrieve/objects/Medication_Status__c/fields/Thyroid_PX_Dosage__c.field-meta.xml
<CustomField>
    <fullName>Thyroid_PX_Dosage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thyroid PX Dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>