instance1/temp-retrieve/objects/Medication_Status__c/fields/Which_Type_of_BPC_157_Do_You_Take__c.field-meta.xml
<CustomField>
    <fullName>Which_Type_of_BPC_157_Do_You_Take__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Which Type of BPC 157 Do You Take</label>
    <length>255</length>
    <type>Text</type>
</CustomField>