instance1/temp-retrieve/objects/Medication_Status__c/fields/Which_Type_of_Progesterone_Do_You_Take__c.field-meta.xml
<CustomField>
    <fullName>Which_Type_of_Progesterone_Do_You_Take__c</fullName>
    <label>Which Type of Progesterone  Do You Take</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pill</fullName>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>